// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component:Product snapshots only shows the first five items 1`] = `
<section
  className="o-expandable aggregation product"
>
  <button
    aria-label="Hide Product / sub-product filter"
    className="o-expandable_header o-expandable_target o-expandable_target__expanded"
    onClick={[Function]}
  >
    <h3
      className="h4 o-expandable_header-left o-expandable_label"
    >
      Product / sub-product
    </h3>
    <span
      className="o-expandable_header-right o-expandable_link"
    >
      <span
        className="o-expandable_cue o-expandable_cue-close"
      >
        <span
          className="u-visually-hidden-on-mobile"
        >
          Hide
        </span>
        <svg>
          minus-round.svg
        </svg>
      </span>
    </span>
  </button>
  <div
    className="o-expandable_content"
  >
    <p>
      The type of product and sub-product the consumer identified in the complaint
    </p>
    <ul>
      <div
        className="aggregation-branch credit-reporting--credit-repair-services--or-other-personal-consumer-reports"
      >
        <li
          className="parent m-form-field m-form-field__checkbox body-copy"
        >
          <input
            aria-label="Credit reporting, credit repair services, or other personal consumer reports"
            checked={false}
            className="flex-fixed a-checkbox"
            id="product-credit-reporting--credit-repair-services--or-other-personal-consumer-reports"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="toggle a-label"
            htmlFor="product-credit-reporting--credit-repair-services--or-other-personal-consumer-reports"
          >
            <span
              className="u-visually-hidden"
            >
              Credit reporting, credit repair services, or other personal consumer reports
            </span>
          </label>
          <button
            className="flex-all a-btn a-btn__link"
            onClick={[Function]}
          >
            <span>
              Credit reporting, credit repair services, or other personal consumer reports
            </span>
            <svg>
              down.svg
            </svg>
          </button>
          <span
            className="flex-fixed parent-count"
          >
            3,277
          </span>
        </li>
      </div>
      <div
        className="aggregation-branch mortgage"
      >
        <li
          className="parent m-form-field m-form-field__checkbox body-copy"
        >
          <input
            aria-label="Mortgage"
            checked={false}
            className="flex-fixed a-checkbox"
            id="product-mortgage"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="toggle a-label"
            htmlFor="product-mortgage"
          >
            <span
              className="u-visually-hidden"
            >
              Mortgage
            </span>
          </label>
          <button
            className="flex-all a-btn a-btn__link"
            onClick={[Function]}
          >
            <span>
              Mortgage
            </span>
            <svg>
              down.svg
            </svg>
          </button>
          <span
            className="flex-fixed parent-count"
          >
            2,299
          </span>
        </li>
      </div>
      <li
        className="layout-row m-form-field m-form-field__checkbox"
      >
        <input
          aria-label="Credit reporting"
          checked={false}
          className="flex-fixed a-checkbox"
          id="product-credit-reporting"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="a-label flex-all bucket-key body-copy"
          htmlFor="product-credit-reporting"
        >
          Credit reporting
        </label>
        <span
          className="flex-fixed bucket-count"
        >
          1,052
        </span>
      </li>
      <li
        className="layout-row m-form-field m-form-field__checkbox"
      >
        <input
          aria-label="Student loan"
          checked={false}
          className="flex-fixed a-checkbox"
          id="product-student-loan"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="a-label flex-all bucket-key body-copy"
          htmlFor="product-student-loan"
        >
          Student loan
        </label>
        <span
          className="flex-fixed bucket-count"
        >
          959
        </span>
      </li>
      <li
        className="layout-row m-form-field m-form-field__checkbox"
      >
        <input
          aria-label="Credit card or prepaid card"
          checked={false}
          className="flex-fixed a-checkbox"
          id="product-credit-card-or-prepaid-card"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="a-label flex-all bucket-key body-copy"
          htmlFor="product-credit-card-or-prepaid-card"
        >
          Credit card or prepaid card
        </label>
        <span
          className="flex-fixed bucket-count"
        >
          836
        </span>
      </li>
    </ul>
    <div>
      <button
        className="a-btn a-btn__link more"
        onClick={[Function]}
      >
        + Show 1 more
      </button>
    </div>
  </div>
</section>
`;

exports[`component:Product snapshots renders without crashing 1`] = `
<section
  className="o-expandable aggregation product"
>
  <button
    aria-label="Hide Product / sub-product filter"
    className="o-expandable_header o-expandable_target o-expandable_target__expanded"
    onClick={[Function]}
  >
    <h3
      className="h4 o-expandable_header-left o-expandable_label"
    >
      Product / sub-product
    </h3>
    <span
      className="o-expandable_header-right o-expandable_link"
    >
      <span
        className="o-expandable_cue o-expandable_cue-close"
      >
        <span
          className="u-visually-hidden-on-mobile"
        >
          Hide
        </span>
        <svg>
          minus-round.svg
        </svg>
      </span>
    </span>
  </button>
  <div
    className="o-expandable_content"
  >
    <p>
      The type of product and sub-product the consumer identified in the complaint
    </p>
    <ul />
  </div>
</section>
`;
